--- a/style.css
+++ b/style.css
@@ -1,4 +1,23 @@
 .desc {
   font-weight: Bold;
   font-family: "Helvetica";
+  font-size: 30px;
+}
+
+.title {
+  font-weight: Bold;
+  font-family: "Helvetica";
+  font-size: 50px;
+}
+
+.headSubtitle {
+  font-style: Italic;
+  font-size: 35px;
+  font-family: "Arial";
+}
+
+.headTitle {
+  font-weight: Bold;
+  font-size: 60px;
+  font-family: "Arial";
 }
