--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@
 }
 
 .productDetails {
-  transform: scale(1.5);
-  width: 300%;
+  transform: scale(2.5);
+  /*width: 300%;
   height: 300%;
-  font-size: 2.0em;
+  font-size: 2.0em;*/
 }
