--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 }
 
 .productDetails {
-  transform: scale(0.25);
+  /*transform: scale(0.25);*/
   /*width: 300%;
   height: 300%;
   font-size: 2.0em;*/
